# command_and_dominate

./: .gitignore  .gitmodules  CMakeLists.txt  README  build_and_run.sh  debug.sh  quick_build.sh  run.sh  update.sh  update_submodule.sh
include/command_and_dominate/: glad.h  glfw.h  glm.h
include/command_and_dominate/camera/: camera.h  camera_forward.h
include/command_and_dominate/game/: game.h  game_forward.h
include/command_and_dominate/game_object/: basic_object.h  basic_object_forward.h  game_object.h  immovable_object.h  immovable_object_forward.h  movable_object.h  movable_object_forward.h  rendered_object.h  rendered_object_forward.h
include/command_and_dominate/image/: image2d.h  image2d_forward.h
include/command_and_dominate/macro/: macro.h
include/command_and_dominate/main/: main.h
include/command_and_dominate/math/: math.h  type_ptr.h
include/command_and_dominate/math/color/: color.h
include/command_and_dominate/math/matrix/: matrix.h  matrix4x4.h
include/command_and_dominate/math/vector/: vector.h  vector2d.h  vector3d.h  vector4d.h
include/command_and_dominate/model/: mesh.h  mesh.hpp  mesh_forward.h  model.h  model.hpp  model_forward.h  vertex.h  vertex.hpp  vertex_forward.h
include/command_and_dominate/shader/: shader.h  shader_forward.h  shader_type.h  shader_type_forward.h
include/command_and_dominate/uniform_block/: uniform_block.h  uniform_block_forward.h
include/command_and_dominate/window/: key_type.h  key_type_forward.h  window.h  window_forward.h
shader/: test.frag  test.geom  test.vert
shared/: CMakeLists.txt
shared/glfw-3.3.7/: CMakeLists.txt
src/: CMakeLists.txt
src/camera/: CMakeLists.txt  camera.cc
src/font/: CMakeLists.txt
src/game/: CMakeLists.txt  game.cc
src/game_object/: CMakeLists.txt  basic_object.cc  game_object.cc  immovable_object.cc  movable_object.cc  rendered_object.cc
src/image/: CMakeLists.txt
src/light/: CMakeLists.txt
src/main/: CMakeLists.txt  main.cc
src/math/color/: color.cc
src/math/matrix/: matrix.cc
src/math/vector/: vector.cc
src/model/: CMakeLists.txt
src/shader/: CMakeLists.txt  shader.cc
src/sound/: CMakeLists.txt
src/uniform_block/: CMakeLists.txt  uniform_block.cc
src/window/: CMakeLists.txt  window.cc
temp/: temp_log
